<resources>
    <string name="app_name">Mixplorer Theme Creator</string>
    <string name="preview">Preview</string>
    <string name="doctypeHtml"><![CDATA[<!DOCTYPE html>]]></string>
    <string name="codeOpen"><![CDATA[<html>\n<body>\n]]></string>
    <string name="codeClose"><![CDATA[\n</body>\n</html>]]></string>
    <string name="h1Open"><![CDATA[<h1>]]></string>
    <string name="h1Close"><![CDATA[</h1>]]></string>
    <string name="h1Content">My First Heading</string>
    <string name="pOpen"><![CDATA[<p>]]></string>
    <string name="pClose"><![CDATA[</p>]]></string>
    <string name="pContent">My first paragraph.</string>
    <string name="title">Title</string>
    <string name="text1">Text 1</string>
    <string name="text2">Text 2</string>
    <string name="button">Button</string>
    <string name="folder">Folder</string>
    <string name="date">Date</string>
    <string name="file">File</string>
    <string name="archive">Archive</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="monet">Monet</string>
    <string name="tertiary">Tertiary</string>
    <string name="audio">Audio</string>
    <string name="generateTheme">Generate theme</string>
    <string name="share_theme">Share Theme</string>
    <string name="name">Name</string>
    <string name="iconPack">Icon pack</string>
    <string name="colorPicker">Color Picker</string>
    <string name="change_colors">Change Colors</string>
    <string name="pickColor">Pick Color</string>
    <string name="hex">Hex</string>
    <string name="pick">Pick</string>
    <string name="cancel">Cancel</string>
</resources>