<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingTop="8dp"
    android:paddingEnd="12dp"
    android:paddingBottom="8dp"
    tools:layout_height="250dp">

    <TextView
        android:id="@+id/textDoctype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctypeHtml"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorAccent" />

    <TextView
        android:id="@+id/textCodeOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codeOpen"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorTertiary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textH1Open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1Open"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorTertiary" />

        <TextView
            android:id="@+id/textH1Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1Content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:id="@+id/textH1Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1Close"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorTertiary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pOpen"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorTertiary" />

        <TextView
            android:id="@+id/textPContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pContent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorAccent" />

        <TextView
            android:id="@+id/textPClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pClose"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?attr/colorTertiary" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCodeClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codeClose"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorTertiary" />
</LinearLayout>