<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:requiresFadingEdge="vertical"
    tools:layout_height="250dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iconFolder"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:srcCompat="@drawable/ic_folder"
                app:tint="?attr/colorOnSurface"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/textFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/folder"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/textFolderDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha=".8"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnSurface" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iconFile"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:srcCompat="@drawable/ic_file"
                app:tint="?attr/colorOnSurface"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/textFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/textFileDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha=".8"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnSurface" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iconArchive"
                android:layout_width="56dp"
                android:layout_height="56dp"
                app:srcCompat="@drawable/ic_archive"
                app:tint="?attr/colorOnSurface"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:id="@+id/textArchive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/archive"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/textArchiveDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha=".8"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                    android:textColor="?attr/colorOnSurface" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>